--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.32.0",
     "prisma": "^6.13.0",
     "supertest": "^7.1.4",
